@@ -245,11 +245,16 @@ The result of the DNS resolution and validation is returned as
 		char** data; /* array of rdata items, NULL terminated*/
 		int* len;    /* array with lengths of rdata items */
 		char* canonname; /* canonical name of result */
-		int rcode;   /* additional error code in case of error */
-		int nxdomain; /* true if nodata because no domain */
-		int bogus;   /* true if there was a security failure */
+		int rcode;   /* additional error code in case of no data */
+		int havedata; /* true if there is data */
+		int nxdomain; /* true if nodata because name does not exist */
+		int secure;  /* true if result is secure */
+		int bogus;   /* true if a security failure happened */
 	};
 .fi
+.P
+If both secure and bogus are false, security was not enabled for the 
+domain of the query.
 .SH "RETURN VALUES"
 Many routines return an error code. The value 0 (zero) denotes no error
 happened. Other values can be passed to
